--- a/static/styles/home.css
+++ b/static/styles/home.css
@@ -53,7 +53,6 @@
 
 .hero-section .welcome-img {
   margin-top: 2em;
-  width: 80%;
   max-height: 50vh;
 }
 
@@ -116,7 +115,7 @@
 }
 
 .profile-container img {
-  width: 100%;
+  height: 180px;
   margin-bottom: 0.5em;
 }
 
